# dimos

./: .gitattributes  .gitignore  NEWREADME.MD  README.md  RERUN_PR_ANALYSIS.md  default.env  flake.nix  mkdocs.yml  pyproject.toml  requirements.txt  rerun_pr_comparison.diff.REMOVED.git-id  rerun_pr_comparison_summary.txt  run_docker.sh  uv.lock.REMOVED.git-id
.github/workflows/: code-cleanup.yml  docker.yml  macos.yml  tests.yml
autoresearch/: eval.py  optimizations.py  program.md  run.sh
dimos/: __init__.py  test_no_sections.py
dimos/agents/: agent.py  agent_huggingface_local.py  agent_huggingface_remote.py  cerebras_agent.py  planning_agent.py
dimos/agents2/: agent.py  spec.py  test_mock_agent.py  testing.py
dimos/agents_deprecated/: agent.py
dimos/control/: __init__.py  blueprints.py  components.py  coordinator.py  hardware_interface.py  test_coordinator_path_follower.py  test_trajectory.py  test_trajectory_controllers.py  tick_loop.py
dimos/core/: __init__.py  arduino_module.py  blueprints.py  core.py  docker_module.py  docker_runner.py  docker_worker_manager.py  global_config.py  module.py  module_coordinator.py  native_module.py  rpc_client.py  run_registry.py  stream.py  test_blueprints.py  test_daemon.py  test_native_module.py  test_native_rebuild.py  test_worker.py  transport.py  worker.py  worker_manager.py
dimos/dashboard/: __init__.py  module.py  rerun_autolog.py  rerun_dashboard.py  rerun_init.py  rerun_logger_module.py  tf_rerun_module.py
dimos/e2e_tests/: lcm_spy.py  test_dimsim_eval.py  test_dimsim_eval_parallel.py  test_dimsim_nav.py
dimos/hardware/: FT_README.md  ardupilot.py  ft_calibration.json  ft_driver_module.py  ft_module_test.py  ft_visualizer_module.py  gstreamer_camera.py  piper_arm.py  ufactory.py
dimos/manipulation/: blueprints.py  manipulation_module.py  test_pick_and_place_unit.py
dimos/mapping/: costmapper.py  test_voxels.py  voxels.py
dimos/memory/: readme.md  stream.py  test_projection.py  test_transformer.py  transformer.py  types.py
dimos/memory2/: __init__.py  backend.py  buffer.py  conftest.py  filter.py  store.py  stream.py  test_e2e.py  test_module.py  test_stream.py  test_visualizer.py  transform.py  type.py
dimos/models/: base.py
dimos/navigation/: base.py  cmd_vel_mux.py  dimos_module_entrypoint.sh  entrypoint.sh  rosnav.py  rosnav_docker.py  test_cmd_vel_mux.py
dimos/navigation/dynamic_map/native/: CMakeLists.txt  dynamic_map_node.cpp
dimos/navigation/dynamic_map/native/common/: dimos_native_module.hpp
dimos/perception/: demo_object_scene_registration.py  object_scene_registration.py  object_tracker.py  spatial_perception.py  test_spatial_memory.py  test_spatial_memory_module.py  visual_servoing.py
dimos/record/: record_replay.py  test_record_replay.py
dimos/robot/: __init__.py  all_blueprints.py  config.py  connection.py  foxglove_bridge.py  module_utils.py  robot.py  robot_clean.py  ros_command_queue.py  ros_control.py
dimos/simulation/: sim_blueprints.py
dimos/stream/: media_provider.py
dimos/types/: costmap.py  media_provider.py  pose.py  test_pose.py  test_timestamped.py  timestamped.py  vector.py  videostream.py
dimos/utils/: change_detect.py  dask_frame_cluster.py  generic.py  ipc_factory.py  metrics.py  multirate.py  ros_utils.py  safe_thread_map.py  test_change_detect.py  test_foxglove_bridge.py  test_reactive.py  transform_utils.py
dimos/vr/: run_vr_server.py
dimos/web/: robot_web_interface.py
docker/agent/: docker-compose.yml
docker/dev/: Dockerfile
docker/navigation/: .env.hardware  Dockerfile  README.md  docker-compose.yml  start.old.sh  start.sh
docker/python/: Dockerfile
docker/simulation/: Dockerfile
docs/: README.md  SUMMARY.md  VIEWER_BACKENDS.md  build_docs.sh  data.md  hooks.py  index.md  robot_architecture.md  serve_docs.sh
docs/api/: hardware.md  index.md  navigation.md  perception.md  robot.md  skills.md  types.md  utils.md
docs/concepts/: lcm.md  transport.md  transports.md
docs/development/: README.md
docs/tutorials/: index.md
installer/: main.ts
installer/build_scripts/: build_pyz.py  (+1 more)
plans/: transform.md
tests/: agent_manip_flow_fastapi_test.py  agent_manip_flow_flask_test.py  run.py  run_robot_clean.py  test_agent_alibaba.py  test_ardupilot.py  test_audio_agent.py  test_audio_robot_agent.py  test_cerebras_agent_skills.py  test_cerebras_unitree_ros.py  test_dashboard_server_thread.py  test_ibvs.py  test_image_backend_utils.py  test_navigate_to_object_robot.py  test_navigation_skills.py  test_object_tracking_webcam.py  test_object_tracking_with_qwen.py  test_person_following_robot.py  test_pick_and_place_module.py  test_planning_robot_agent.py  test_standalone_fastapi.py  test_standalone_project_out.py  test_unitree_agent_queries_fastapi.py  test_zed_module.py
(+595 files in other folders)
