[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A fork of dimensionalOS/dimos — modular robotics and agent orchestration framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "dimos contributors" }
]
keywords = ["robotics", "agents", "orchestration", "ros2", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "openai>=1.0",
    "numpy>=1.24",
    "pillow>=10.0",
    "reactivex>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]
ros2 = [
    "rclpy",
]
vision = [
    "opencv-python>=4.8",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.scripts]
dimos = "dimos.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/dimos"
Issues = "https://github.com/your-org/dimos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov flags so a plain `pytest` run doesn't require pytest-cov to be installed
# -p no:warnings suppresses deprecation noise from third-party libs during local dev
# --tb=short gives more concise tracebacks, easier to scan during local iteration
# --no-header keeps output a bit cleaner when running frequently during development
addopts = "-v -p no:warnings --tb=short --no-header"

[tool.coverage.run]
source = ["src/dimos"]
omit = ["tests/*"]

[tool.coverage.report]
# skip files that have 100% coverage to keep the report focused on what needs attention
skip_covered = true
show_missing = true
